@@ -20,6 +20,7 @@
 - Open dynamic action link group nested in the menu tree, under the action opening it.
 - Add sort_joins to column, defaults to includes value, so it's possible to set sort by SQL without joining the includes, or join with some associations, and preload others.
 - Fix when textarea is required and uses tinymce, show the validation error if it's empty and sync the content before submitting.
+- Support add_new in collection associations too, only with popup mode (add_new: true will default to popup in such associations)
 
 = 4.1.5
 - Fix update_columns global config for field search ac
